--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node -r dotenv/config ./src/index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' -r dotenv/config ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.2",
+    "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
